--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -301,8 +301,17 @@ body.register .buddypress-wrap .page ul {
 	z-index: 3;
 	opacity: 0;
 	transition: all 0.2s;
+	text-decoration: none;
 
 	@include box-shadow( 0 0 3px 0 rgba(0, 0, 0, 0.2) );
+
+	> i {
+		font-size: 20px;
+	}
+}
+
+#item-header a.link-change-cover-image > i {
+	font-size: 16px;
 }
 
 #item-header a.position-change-cover-image {
