--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -5510,9 +5510,20 @@ body.register .buddypress-wrap .page ul {
   z-index: 3;
   opacity: 0;
   transition: all 0.2s;
+  text-decoration: none;
   -webkit-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
+}
+
+#item-header a.link-change-cover-image > i,
+#item-header a.position-change-cover-image > i,
+#item-header a.link-change-profile-image > i {
+  font-size: 20px;
+}
+
+#item-header a.link-change-cover-image > i {
+  font-size: 16px;
 }
 
 #item-header a.position-change-cover-image {
