#1466 - Hide the photo loading progress for edit popup

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -170,6 +170,10 @@
 			}
 		}
 
+		.dropzone .dz-preview.dz-complete .dz-progress {
+			display: none;
+		}
+
 		@media screen and (max-width: 603px) {
 
 			&.activity-update-form .focus-in #whats-new-content .medium-editor-toolbar {
