--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2290,6 +2290,41 @@ input.search-query-input {
   content: "\e815";
 }
 
+.activity-list .activity-item .bp-generic-meta.action .reactions-button .react-like:before {
+  content: "\e815";
+  color: #0061ac;
+}
+
+.activity-list .activity-item .bp-generic-meta.action .reactions-button .react-love:before {
+  content: "\e80d";
+  color: #0061ac;
+}
+
+.activity-list .activity-item .bp-generic-meta.action .reactions-button .react-care:before {
+  content: "\e96d";
+  color: #0061ac;
+}
+
+.activity-list .activity-item .bp-generic-meta.action .reactions-button .react-haha:before {
+  content: "\e814";
+  color: #0061ac;
+}
+
+.activity-list .activity-item .bp-generic-meta.action .reactions-button .react-wow:before {
+  content: "\e8f0";
+  color: #0061ac;
+}
+
+.activity-list .activity-item .bp-generic-meta.action .reactions-button .react-sad:before {
+  content: "\e821";
+  color: #0061ac;
+}
+
+.activity-list .activity-item .bp-generic-meta.action .reactions-button .react-angry:before {
+  content: "\e8cf";
+  color: #0061ac;
+}
+
 .activity-list .activity-item .bp-generic-meta.action .unfav:before {
   content: "\e815";
   color: #0061ac;
