Fixed group activity edit popup issue.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -170,12 +170,24 @@
 			}
 		}
 
+		@media screen and (max-width: 646px) {
+
+			&.activity-update-form.group-activity .focus-in #whats-new-content .medium-editor-toolbar {
+
+				#buddypress & {
+					bottom: 111px;
+				}
+
+			}
+
+		}
+
 		@media screen and (max-width: 603px) {
 
 			&.activity-update-form .focus-in #whats-new-content .medium-editor-toolbar {
 
 				#buddypress > & {
-					bottom: 58px;
+					bottom: 112px;
 				}
 
 			}
@@ -187,7 +199,15 @@
 			&.activity-update-form .focus-in #whats-new-content .medium-editor-toolbar {
 
 				#buddypress > & {
-					bottom: 112px;
+					bottom: 146px;
+				}
+
+			}
+
+			&.activity-update-form.group-activity .focus-in #whats-new-content .medium-editor-toolbar {
+
+				#buddypress & {
+					bottom: 146px;
 				}
 
 			}
