#1466 - Improved Edit Activity popup scroll behavior

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -100,6 +100,15 @@
 		max-height: 100%;
 		overflow: auto;
 
+		.edit-activity-content-wrap {
+			max-height: calc(100vh - 230px);
+			overflow: auto;
+		}
+
+		#whats-new-form #whats-new-toolbar {
+			padding-top: 10px;
+		}
+
 		#whats-new-form {
 			width: 700px;
 			max-width: 90%;
