--- a/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
@@ -83,7 +83,8 @@
 			border-radius: 5px;
 			font-size: 13px;
 			line-height: 1.6;
-			padding: 6px 10px;
+			padding: 6px 11px;
+			box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
 
 			&.loading:after {
 				content: "\e838";
