#561 - adjusted cover photo alert popup description spacing

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
@@ -210,3 +210,11 @@ body.guillotine-dragging * {
 	width: auto !important;
 	height: auto !important;
 }
+
+#cover-photo-alert .bb-field-wrap {
+	margin-bottom: 0;
+
+	p {
+		margin-bottom: 0;
+	}
+}
