--- a/src/bp-templates/bp-nouveau/common-styles/_bp_dropzone.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_dropzone.scss
@@ -576,6 +576,13 @@
 		font-size: 110%;
 		margin: 5px 0;
 		text-align: center;
+
+		button {
+			background-color: transparent;
+			border: 0;
+			color: #767676;
+			font-size: 110%;
+		}
 	}
 }
 
