--- a/src/bp-templates/bp-nouveau/common-styles/_bp_dropzone.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_dropzone.scss
@@ -604,11 +604,10 @@
 		line-height: 1.3;
 		margin: 0 5px 10px;
 
-		span:before {
-			background-size: 30px;
-			height: 26px;
-			width: 30px;
-			margin: 0 auto 10px;
+		.dz-button {
+			background-size: 30px !important;
+			font-size: 12px !important;
+			padding-top: 35px !important;
 		}
 	}
 }
