--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -16627,11 +16627,10 @@ span.CodeMirror-selectedtext {
   margin: 0 5px 10px;
 }
 
-.dropzone.dz-started .dz-default.dz-message span:before {
-  background-size: 30px;
-  height: 26px;
-  width: 30px;
-  margin: 0 auto 10px;
+.dropzone.dz-started .dz-default.dz-message .dz-button {
+  background-size: 30px !important;
+  font-size: 12px !important;
+  padding-top: 35px !important;
 }
 
 /*
