--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -13663,6 +13663,10 @@ ul.bb-albums-list .bb-more-photos strong {
   overflow: auto;
 }
 
+.modal-container .bp-existing-media-wrap .media-list li .media-action-wrap {
+  display: none;
+}
+
 .bb-model-close-button .bb-icon-close {
   font-size: 22px !important;
 }
@@ -15553,7 +15557,9 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
 }
 
 @media screen and (max-width: 520px) {
+  .bp-media-move-file .bb-model-footer a.bp-media-open-create-popup-folder,
   .bp-media-move-file .bb-model-footer a.bp-document-open-create-popup-folder,
+  .bp-media-move-folder .bb-model-footer a.bp-media-open-create-popup-folder,
   .bp-media-move-folder .bb-model-footer a.bp-document-open-create-popup-folder {
     display: block;
     float: none;
