#1538 - Fixed the RTL issue with the code editor for the RTL languages

--- a/src/bp-templates/bp-nouveau/common-styles/_codemirror.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_codemirror.scss
@@ -349,3 +349,19 @@ div.CodeMirror-dragcursors {
 
 /* Help users use markselection to safely style text background */
 span.CodeMirror-selectedtext { background: none; }
+
+html[dir="rtl"] .widgets-php,
+html[dir="rtl"] .wp-customizer {
+  .CodeMirror-sizer {
+    border-right: 0;
+  }
+  .CodeMirror-scroll {
+    margin-right: 0;
+  }
+  .CodeMirror-gutters {
+    left: initial;
+  }
+  .CodeMirror-line{
+    text-align: right;
+  }
+}
