#1356 - Fixed rtl issue for profile completion widget counter

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -410,6 +410,12 @@ div.profile_completion_wrap {
 			float: right;
 			width: 50px;
 			text-align: center;
+
+			html[dir="rtl"] & {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
 		}
 	}
 
