#962 - Made images single from grid in feed for smaller devices, Added media icon

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -911,6 +911,18 @@ span.dashicons.dashicons-admin-file:before {
 
 .activity-list .activity-item .activity-content.media-activity-wrap .activity-inner {
 	overflow: initial;
+
+	@media screen and (max-width: 544px) {
+
+		.bb-activity-media-elem {
+			flex: 0 0 100%;
+			max-width: 100%;
+
+			&.hideact-grid-1-2 {
+				flex: 0;
+			}
+		}
+	}
 }
 
 #media-stream.media .bb-photo-thumb,
@@ -1106,8 +1118,8 @@ span.dashicons.dashicons-admin-file:before {
 
 .bb-activity-media-wrap .bb-activity-media-elem.media-activity .media-action-wrap .media-action_list ul li.move_file a:before,
 #media-stream.media .bb-photo-thumb .media-action-wrap .media-action_list ul li.move_file a:before {
-	content: "\e8a8";
-	font-size: 17px;
+	content: "\e963";
+	font-size: 15px;
 }
 
 @media screen and ( max-width: 799px ) {
