--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -3814,8 +3814,8 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
 }
 
 .location-album-list-wrap-main .location-album-list-wrap .location-album-list li span:before {
-	content: "\e8a8";
-	font-size: 17px;
+	content: "\e963";
+	font-size: 15px;
 }
 
 .modal-container .bb-field-steps {
