--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2625,6 +2625,122 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 	}
 }
 
+//Album Search result ajax and page
+.search-media-list {
+
+	.item {
+		width: 100%;
+	}
+
+	.media-album_items {
+		display: flex;
+		align-items: center;
+		width: 100%;
+	}
+
+	.media-album_thumb {
+		width: 100px;
+		padding: 0 15px 0 10px;
+
+		img {
+			border-radius: 4px !important;
+			max-width: 100%;
+			height: auto;
+		}
+	}
+
+	.media-album_details {
+		width: calc(35% - 107px);
+		line-height: 1;
+
+		.bp-search-ac-header & {
+			width: calc(35% - 90px);
+		}
+
+		.media-album_name {
+			color: #122b46;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			display: block;
+			max-width: 90%;
+		}
+
+		.media-photo_count {
+			color: #939597;
+			font-size: 13px;
+			display: block;
+			line-height: 1;
+			margin-top: 4px;
+		}
+	}
+
+	.media-album_modified {
+		width: 20%;
+
+		.media-album_details__bottom {
+			display: block;
+			font-size: 14px;
+			line-height: 1.3;
+			color: #4d5c6d;
+
+			.media-album_date {
+				display: inset-block;
+				vertical-align: middle;
+			}
+
+			.media-album_author {
+				display: block;
+				font-size: 13px;
+				color: #939597;
+
+				a {
+					color: #939597;
+				}
+			}
+		}
+	}
+
+	.media-album_group,
+	.media-album_visibility {
+		width: 20%;
+		display: block;
+		font-size: 14px;
+		line-height: 1.3;
+		color: #4d5c6d;
+	}
+
+	@media screen and (max-width: 540px) {
+
+		.media-album_items {
+			flex-flow: column;
+		}
+
+		.media-album_thumb {
+			margin-bottom: 15px;
+			padding: 0;
+		}
+
+		.media-album_thumb,
+		.media-album_details,
+		.media-album_modified,
+		.media-album_group,
+		.media-album_visibility {
+			-ms-flex-preferred-size: 100% !important;
+			flex-basis: 100% !important;
+			width: 100% !important;
+			line-height: inherit;
+		}
+
+		.media-album_details .media-photo_count {
+			margin-top: 0;
+			margin-bottom: 10px;
+		}
+	}
+
+}
+
+
 //Document Search result ajax and page
 .search-document-list {
 
