Changing “AppBoss” to “BuddyBoss App”

--- a/src/bp-core/admin/css/hello-rtl.css
+++ b/src/bp-core/admin/css/hello-rtl.css
@@ -1,5 +1,5 @@
 /*------------------------------------------------------------------------------
-Loaded in wp-admin for query string `hello=buddyboss` and `hello=appboss`.
+Loaded in wp-admin for query string `hello=buddyboss` and `hello=buddyboss-app`.
 
 @since BuddyPress 3.0.0
 
@@ -232,7 +232,7 @@ TABLE OF CONTENTS:
   font-size: 15px;
 }
 
-.bp-hello-appboss .bp-hello-footer {
+.bp-hello-buddyboss-app .bp-hello-footer {
   border-top: none;
 }
 
@@ -281,7 +281,7 @@ TABLE OF CONTENTS:
   background-color: white;
 }
 
-.bp-hello-appboss .bp-hello-content {
+.bp-hello-buddyboss-app .bp-hello-content {
   padding: 0;
 }
 
@@ -330,7 +330,7 @@ TABLE OF CONTENTS:
   #bp-hello-container .bp-hello-header h1 {
     line-height: inherit;
   }
-  #bp-hello-container.bp-hello-appboss {
+  #bp-hello-container.bp-hello-buddyboss-app {
     bottom: auto;
     width: 105vmin;
     max-width: 900px;
@@ -341,7 +341,7 @@ TABLE OF CONTENTS:
     top: 50%;
     transform: translateY(-50%);
   }
-  #bp-hello-container.bp-hello-appboss .bp-hello-footer {
+  #bp-hello-container.bp-hello-buddyboss-app .bp-hello-footer {
     height: 60px;
     position: static;
   }
@@ -370,7 +370,7 @@ TABLE OF CONTENTS:
     height: calc(100% - 90px);
     padding: 0 23px;
   }
-  .bp-hello-appboss .bp-hello-content {
+  .bp-hello-buddyboss-app .bp-hello-content {
     height: calc(100% - 120px);
     padding: 0;
   }
@@ -388,7 +388,7 @@ TABLE OF CONTENTS:
     right: calc((100% - 896px) / 2);
     left: calc((100% - 896px) / 2);
   }
-  .bp-hello-appboss .bp-hello-content {
+  .bp-hello-buddyboss-app .bp-hello-content {
     height: calc(100% - 120px);
     padding: 0;
   }
