--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -544,7 +544,7 @@ body.buddyboss_page_bbp-converter .bp-admin-card h2:before,
 }
 
 /* Integrations - AppBoss */
-.bp-admin-card.section-bp_appboss-integration h2:before {
+.bp-admin-card.section-bp_buddyboss_app-integration h2:before {
   background-image: url(../../images/admin/icons/logos/appboss.png);
   background-size: 100% 100%;
 }
@@ -1571,17 +1571,17 @@ body.post-type-bp-email .categorydiv label {
 /*------------------------------------------------------------------------------
  * 8.0 AppBoss page
  *----------------------------------------------------------------------------*/
-.bp_appboss_wrap {
+.bp_buddyboss_app_wrap {
   min-width: 255px;
   max-width: 1150px;
 }
 
-.bp_appboss_wrap .appboss-featured {
+.bp_buddyboss_app_wrap .buddyboss-app-featured {
   margin: 20px 2px 0;
 }
 
-.bp_appboss_wrap .appboss-banner-block,
-.bp_appboss_wrap .appboss-learndash-banner-block {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block,
+.bp_buddyboss_app_wrap .buddyboss-app-learndash-banner-block {
   background: #fff;
   margin: 0 0 20px;
   padding: 2em 2.8em;
@@ -1590,11 +1590,11 @@ body.post-type-bp-email .categorydiv label {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
 }
 
-.bp_appboss_wrap .appboss-banner-block p {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block p {
   margin: 0 0 20px;
 }
 
-.bp_appboss_wrap .appboss-banner-block-items {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-items {
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: horizontal;
@@ -1605,7 +1605,7 @@ body.post-type-bp-email .categorydiv label {
   margin: 0 -10px;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item {
   -webkit-box-flex: 1;
   flex: 1;
   margin: 2em 1em;
@@ -1613,7 +1613,7 @@ body.post-type-bp-email .categorydiv label {
   width: 30%;
 }
 
-.bp_appboss_wrap .appboss-column-block-item {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item {
   border-top: 2px solid #f9f9f9;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -1625,21 +1625,21 @@ body.post-type-bp-email .categorydiv label {
   padding: 20px 2em;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item,
-.bp_appboss_wrap .appboss-column-block-item {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item,
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item {
   display: none;
 }
 
-.bp_appboss_wrap .appboss-column-block-item:nth-of-type(-n+3) {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item:nth-of-type(-n+3) {
   display: flex;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item:nth-child(-n+3) {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item:nth-child(-n+3) {
   display: block;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item-icon,
-.bp_appboss_wrap .appboss-column-block-item-icon {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item-icon,
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item-icon {
   -webkit-box-align: center;
   align-items: center;
   display: -webkit-box;
@@ -1648,15 +1648,15 @@ body.post-type-bp-email .categorydiv label {
   justify-content: center;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item-icon {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item-icon {
   justify-content: left;
 }
 
-.bp_appboss_wrap .appboss-banner-block img {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block img {
   height: 62px;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item-content {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item-content {
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: vertical;
@@ -1667,19 +1667,19 @@ body.post-type-bp-email .categorydiv label {
   padding: 24px 0 0;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item-content h3 {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item-content h3 {
   margin-top: 0;
 }
 
-.bp_appboss_wrap .appboss-banner-block p {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block p {
   margin: 0 0 20px;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item-content p {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item-content p {
   margin: 0 0 auto;
 }
 
-.bp_appboss_wrap .appboss-column-block-item-icon {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item-icon {
   background: #f7f7f7;
   border: 1px solid #e6e6e6;
   height: 100px;
@@ -1687,12 +1687,12 @@ body.post-type-bp-email .categorydiv label {
   width: 100px;
 }
 
-.bp_appboss_wrap .appboss-column-block img {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block img {
   max-height: 50px;
   max-width: 50px;
 }
 
-.bp_appboss_wrap .appboss-column-block-item-content {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item-content {
   display: -webkit-box;
   display: flex;
   -webkit-box-flex: 1;
@@ -1704,17 +1704,17 @@ body.post-type-bp-email .categorydiv label {
   min-width: 200px;
 }
 
-.bp_appboss_wrap .appboss-column-block-item-content h2 {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item-content h2 {
   float: right;
   margin-top: 10px;
 }
 
-.bp_appboss_wrap .appboss-column-block-item-content p {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item-content p {
   float: right;
   margin-top: 0;
 }
 
-.bp_appboss_wrap .appboss-button {
+.bp_buddyboss_app_wrap .buddyboss-app-button {
   border-radius: 3px;
   cursor: pointer;
   display: block;
@@ -1727,7 +1727,7 @@ body.post-type-bp-email .categorydiv label {
   width: 124px;
 }
 
-.bp_appboss_wrap .appboss-learndash-banner-block {
+.bp_buddyboss_app_wrap .buddyboss-app-learndash-banner-block {
   display: -webkit-box;
   display: flex;
   -webkit-box-align: center;
@@ -1735,17 +1735,17 @@ body.post-type-bp-email .categorydiv label {
   padding: 2em;
 }
 
-.bp_appboss_wrap .appboss-learndash-banner-block-image {
+.bp_buddyboss_app_wrap .buddyboss-app-learndash-banner-block-image {
   margin-left: 2em;
   padding: 1em;
 }
 
-.bp_appboss_wrap .appboss-learndash-banner-block-image .appboss-img {
+.bp_buddyboss_app_wrap .buddyboss-app-learndash-banner-block-image .buddyboss-app-img {
   max-height: 130px;
   max-width: 160px;
 }
 
-.bp_appboss_wrap .appboss-learndash-banner-block-content {
+.bp_buddyboss_app_wrap .buddyboss-app-learndash-banner-block-content {
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: vertical;
@@ -1756,11 +1756,11 @@ body.post-type-bp-email .categorydiv label {
   padding: 1em 0;
 }
 
-.bp_appboss_wrap .appboss-learndash-banner-block-content h1 {
+.bp_buddyboss_app_wrap .buddyboss-app-learndash-banner-block-content h1 {
   padding-bottom: 0;
 }
 
-.bp_appboss_wrap .appboss-column-section {
+.bp_buddyboss_app_wrap .buddyboss-app-column-section {
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: horizontal;
@@ -1770,7 +1770,7 @@ body.post-type-bp-email .categorydiv label {
   justify-content: space-around;
 }
 
-.bp_appboss_wrap .appboss-column {
+.bp_buddyboss_app_wrap .buddyboss-app-column {
   -webkit-box-flex: 1;
   flex: 1;
   min-width: 0;
@@ -1778,13 +1778,13 @@ body.post-type-bp-email .categorydiv label {
   padding-left: 20px;
 }
 
-.bp_appboss_wrap .appboss-column:last-child {
+.bp_buddyboss_app_wrap .buddyboss-app-column:last-child {
   padding-left: 0;
 }
 
-.bp_appboss_wrap .appboss-column-block,
-.bp_appboss_wrap .appboss-small-dark-block,
-.bp_appboss_wrap .appboss-small-light-block {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block,
+.bp_buddyboss_app_wrap .buddyboss-app-small-dark-block,
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block {
   box-sizing: border-box;
   border-radius: 6px;
   border: 1px solid #e5e5e5;
@@ -1793,23 +1793,23 @@ body.post-type-bp-email .categorydiv label {
   padding: 2em;
 }
 
-.bp_appboss_wrap .appboss-column-block,
-.bp_appboss_wrap .appboss-small-light-block {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block,
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block {
   background: #fff;
 }
 
-.bp_appboss_wrap .appboss-small-light-block {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block {
   display: -webkit-box;
   display: flex;
   flex-wrap: wrap;
 }
 
-.bp_appboss_wrap .appboss-small-light-block img {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block img {
   height: 225px;
   margin: 0 -2em 0 2em;
 }
 
-.bp_appboss_wrap .appboss-small-light-block-content {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block-content {
   display: -webkit-box;
   display: flex;
   -webkit-box-flex: 1;
@@ -1821,39 +1821,39 @@ body.post-type-bp-email .categorydiv label {
   justify-content: space-around;
 }
 
-.bp_appboss_wrap .appboss-small-light-block h1 {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block h1 {
   margin-top: -12px;
 }
 
-.bp_appboss_wrap .appboss-small-light-block p {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block p {
   margin-top: 0;
 }
 
-.bp_appboss_wrap .appboss-small-light-block-buttons {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block-buttons {
   display: -webkit-box;
   display: flex;
   -webkit-box-pack: justify;
   justify-content: space-between;
 }
 
-.bp_appboss_wrap .appboss-small-light-block-content a {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block-content a {
   width: 48%;
 }
 
-.bp_appboss_wrap .appboss-small-dark-block {
+.bp_buddyboss_app_wrap .buddyboss-app-small-dark-block {
   background-color: #00aae1;
   text-align: center;
 }
 
-.bp_appboss_wrap .appboss-small-dark-block h1 {
+.bp_buddyboss_app_wrap .buddyboss-app-small-dark-block h1 {
   color: #fff;
 }
 
-.bp_appboss_wrap .appboss-small-dark-block p {
+.bp_buddyboss_app_wrap .buddyboss-app-small-dark-block p {
   color: #fafafa;
 }
 
-.bp_appboss_wrap .appboss-small-dark-block img {
+.bp_buddyboss_app_wrap .buddyboss-app-small-dark-block img {
   margin: 10px 0;
   max-width: 100%;
 }
