--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -564,7 +564,7 @@ body.buddyboss_page_bbp-converter .bp-admin-card h2:before,
 }
 
 /* Integrations - AppBoss */
-.bp-admin-card.section-bp_appboss-integration h2:before {
+.bp-admin-card.section-bp_buddyboss_app-integration h2:before {
 	background-image: url(../../images/admin/icons/logos/appboss.png);
 	background-size: 100% 100%;
 }
@@ -1667,17 +1667,17 @@ body.post-type-bp-email .categorydiv label {
 /*------------------------------------------------------------------------------
  * 8.0 AppBoss page
  *----------------------------------------------------------------------------*/
-.bp_appboss_wrap {
+.bp_buddyboss_app_wrap {
 	min-width: 255px;
 	max-width: 1150px;
 }
 
-.bp_appboss_wrap .appboss-featured {
+.bp_buddyboss_app_wrap .buddyboss-app-featured {
 	margin: 20px 2px 0;
 }
 
-.bp_appboss_wrap .appboss-banner-block,
-.bp_appboss_wrap .appboss-learndash-banner-block {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block,
+.bp_buddyboss_app_wrap .buddyboss-app-learndash-banner-block {
 	background: #fff;
 	margin: 0 0 20px;
 	padding: 2em 2.8em;
@@ -1686,11 +1686,11 @@ body.post-type-bp-email .categorydiv label {
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
 }
 
-.bp_appboss_wrap .appboss-banner-block p {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block p {
 	margin: 0 0 20px;
 }
 
-.bp_appboss_wrap .appboss-banner-block-items {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-items {
 	display: -webkit-box;
 	display: flex;
 	-webkit-box-orient: horizontal;
@@ -1701,7 +1701,7 @@ body.post-type-bp-email .categorydiv label {
 	margin: 0 -10px;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item {
 	-webkit-box-flex: 1;
 	flex: 1;
 	margin: 2em 1em;
@@ -1709,7 +1709,7 @@ body.post-type-bp-email .categorydiv label {
 	width: 30%;
 }
 
-.bp_appboss_wrap .appboss-column-block-item {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item {
 	border-top: 2px solid #f9f9f9;
 	-webkit-box-orient: horizontal;
 	-webkit-box-direction: normal;
@@ -1721,21 +1721,21 @@ body.post-type-bp-email .categorydiv label {
 	padding: 20px 2em;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item,
-.bp_appboss_wrap .appboss-column-block-item {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item,
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item {
 	display: none;
 }
 
-.bp_appboss_wrap .appboss-column-block-item:nth-of-type(-n+3) {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item:nth-of-type(-n+3) {
 	display: flex;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item:nth-child(-n+3) {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item:nth-child(-n+3) {
 	display: block;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item-icon,
-.bp_appboss_wrap .appboss-column-block-item-icon {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item-icon,
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item-icon {
 	-webkit-box-align: center;
 	align-items: center;
 	display: -webkit-box;
@@ -1744,15 +1744,15 @@ body.post-type-bp-email .categorydiv label {
 	justify-content: center;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item-icon {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item-icon {
 	justify-content: left;
 }
 
-.bp_appboss_wrap .appboss-banner-block img {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block img {
 	height: 62px;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item-content {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item-content {
 	display: -webkit-box;
 	display: flex;
 	-webkit-box-orient: vertical;
@@ -1763,19 +1763,19 @@ body.post-type-bp-email .categorydiv label {
 	padding: 24px 0 0;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item-content h3 {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item-content h3 {
 	margin-top: 0;
 }
 
-.bp_appboss_wrap .appboss-banner-block p {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block p {
 	margin: 0 0 20px;
 }
 
-.bp_appboss_wrap .appboss-banner-block-item-content p {
+.bp_buddyboss_app_wrap .buddyboss-app-banner-block-item-content p {
 	margin: 0 0 auto;
 }
 
-.bp_appboss_wrap .appboss-column-block-item-icon {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item-icon {
 	background: #f7f7f7;
 	border: 1px solid #e6e6e6;
 	height: 100px;
@@ -1783,12 +1783,12 @@ body.post-type-bp-email .categorydiv label {
 	width: 100px;
 }
 
-.bp_appboss_wrap .appboss-column-block img {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block img {
 	max-height: 50px;
 	max-width: 50px;
 }
 
-.bp_appboss_wrap .appboss-column-block-item-content {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item-content {
 	display: -webkit-box;
 	display: flex;
 	-webkit-box-flex: 1;
@@ -1800,17 +1800,17 @@ body.post-type-bp-email .categorydiv label {
 	min-width: 200px;
 }
 
-.bp_appboss_wrap .appboss-column-block-item-content h2 {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item-content h2 {
 	float: left;
 	margin-top: 10px;
 }
 
-.bp_appboss_wrap .appboss-column-block-item-content p {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block-item-content p {
 	float: left;
 	margin-top: 0;
 }
 
-.bp_appboss_wrap .appboss-button {
+.bp_buddyboss_app_wrap .buddyboss-app-button {
 	border-radius: 3px;
 	cursor: pointer;
 	display: block;
@@ -1823,7 +1823,7 @@ body.post-type-bp-email .categorydiv label {
 	width: 124px;
 }
 
-.bp_appboss_wrap .appboss-learndash-banner-block {
+.bp_buddyboss_app_wrap .buddyboss-app-learndash-banner-block {
 	display: -webkit-box;
 	display: flex;
 	-webkit-box-align: center;
@@ -1831,17 +1831,17 @@ body.post-type-bp-email .categorydiv label {
 	padding: 2em;
 }
 
-.bp_appboss_wrap .appboss-learndash-banner-block-image {
+.bp_buddyboss_app_wrap .buddyboss-app-learndash-banner-block-image {
 	margin-right: 2em;
 	padding: 1em;
 }
 
-.bp_appboss_wrap .appboss-learndash-banner-block-image .appboss-img {
+.bp_buddyboss_app_wrap .buddyboss-app-learndash-banner-block-image .buddyboss-app-img {
 	max-height: 130px;
 	max-width: 160px;
 }
 
-.bp_appboss_wrap .appboss-learndash-banner-block-content {
+.bp_buddyboss_app_wrap .buddyboss-app-learndash-banner-block-content {
 	display: -webkit-box;
 	display: flex;
 	-webkit-box-orient: vertical;
@@ -1852,11 +1852,11 @@ body.post-type-bp-email .categorydiv label {
 	padding: 1em 0;
 }
 
-.bp_appboss_wrap .appboss-learndash-banner-block-content h1 {
+.bp_buddyboss_app_wrap .buddyboss-app-learndash-banner-block-content h1 {
 	padding-bottom: 0;
 }
 
-.bp_appboss_wrap .appboss-column-section {
+.bp_buddyboss_app_wrap .buddyboss-app-column-section {
 	display: -webkit-box;
 	display: flex;
 	-webkit-box-orient: horizontal;
@@ -1866,7 +1866,7 @@ body.post-type-bp-email .categorydiv label {
 	justify-content: space-around;
 }
 
-.bp_appboss_wrap .appboss-column {
+.bp_buddyboss_app_wrap .buddyboss-app-column {
 	-webkit-box-flex: 1;
 	flex: 1;
 	min-width: 0;
@@ -1874,13 +1874,13 @@ body.post-type-bp-email .categorydiv label {
 	padding-right: 20px;
 }
 
-.bp_appboss_wrap .appboss-column:last-child {
+.bp_buddyboss_app_wrap .buddyboss-app-column:last-child {
 	padding-right: 0;
 }
 
-.bp_appboss_wrap .appboss-column-block,
-.bp_appboss_wrap .appboss-small-dark-block,
-.bp_appboss_wrap .appboss-small-light-block {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block,
+.bp_buddyboss_app_wrap .buddyboss-app-small-dark-block,
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block {
 	box-sizing: border-box;
 	border-radius: 6px;
 	border: 1px solid #e5e5e5;
@@ -1889,23 +1889,23 @@ body.post-type-bp-email .categorydiv label {
 	padding: 2em;
 }
 
-.bp_appboss_wrap .appboss-column-block,
-.bp_appboss_wrap .appboss-small-light-block {
+.bp_buddyboss_app_wrap .buddyboss-app-column-block,
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block {
 	background: #fff;
 }
 
-.bp_appboss_wrap .appboss-small-light-block {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block {
 	display: -webkit-box;
 	display: flex;
 	flex-wrap: wrap;
 }
 
-.bp_appboss_wrap .appboss-small-light-block img {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block img {
 	height: 225px;
 	margin: 0 2em 0 -2em;
 }
 
-.bp_appboss_wrap .appboss-small-light-block-content {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block-content {
 	display: -webkit-box;
 	display: flex;
 	-webkit-box-flex: 1;
@@ -1917,39 +1917,39 @@ body.post-type-bp-email .categorydiv label {
 	justify-content: space-around;
 }
 
-.bp_appboss_wrap .appboss-small-light-block h1 {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block h1 {
 	margin-top: -12px;
 }
 
-.bp_appboss_wrap .appboss-small-light-block p {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block p {
 	margin-top: 0;
 }
 
-.bp_appboss_wrap .appboss-small-light-block-buttons {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block-buttons {
 	display: -webkit-box;
 	display: flex;
 	-webkit-box-pack: justify;
 	justify-content: space-between;
 }
 
-.bp_appboss_wrap .appboss-small-light-block-content a {
+.bp_buddyboss_app_wrap .buddyboss-app-small-light-block-content a {
 	width: 48%;
 }
 
-.bp_appboss_wrap .appboss-small-dark-block {
+.bp_buddyboss_app_wrap .buddyboss-app-small-dark-block {
 	background-color: #00aae1;
 	text-align: center;
 }
 
-.bp_appboss_wrap .appboss-small-dark-block h1 {
+.bp_buddyboss_app_wrap .buddyboss-app-small-dark-block h1 {
 	color: #fff;
 }
 
-.bp_appboss_wrap .appboss-small-dark-block p {
+.bp_buddyboss_app_wrap .buddyboss-app-small-dark-block p {
 	color: #fafafa;
 }
 
-.bp_appboss_wrap .appboss-small-dark-block img {
+.bp_buddyboss_app_wrap .buddyboss-app-small-dark-block img {
 	margin: 10px 0;
 	max-width: 100%;
 }
