--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -1740,7 +1740,7 @@ span.dashicons.dashicons-admin-file:before {
 }
 
 .react-icon {
-	background-image: url(../images/reaction.webp);
+	background-image: url(../images/reaction.jpg);
 	background-repeat: no-repeat;
 }
 
