--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3632,7 +3632,7 @@ span.dashicons.dashicons-admin-file:before {
 }
 
 .react-icon {
-  background-image: url(../images/reaction.webp);
+  background-image: url(../images/reaction.jpg);
   background-repeat: no-repeat;
 }
 
